Añadida entidad Meeting, DTOs, Mapper, Enum, Controlador y Servicio
- e agrega la entidad Meeting para representar las reservas de horarios realizadas por los clientes. Se establece una relación uno a uno entre Meeting y Schedule para asociar cada reserva con un horario específico. Además, se actualizan las operaciones en el Controlador y el Servicio para gestionar la reserva de horarios y su relación dinámica con WeeklySchedule y Schedule.
-se añade la entidad Meeting para gestionar las reservas de horarios por parte de los clientes. Se incluyen los DTOs, mappers y servicios necesarios para manejar las operaciones relacionadas con las reservas. Además, se actualiza el controlador para permitir la reserva de horarios y se integra con las entidades existentes del sistema, como WeeklySchedule y Schedule.